Revision history for Dist-Zilla-PluginBundle-Author-ETHER

{{$NEXT}}
          - minting profile updates:
            - pragma boilerplate updated to disable "smartmatch" and "switch"
              features

0.167     2025-05-20 00:01:11Z
          - fix woven pod for irc details when irc channel contains a hyphen

0.166     2025-03-14 19:34:58Z
          - switched from [PodCoverageTests] to [Test::Pod::Coverage::TrustMe]

0.165     2025-01-31 23:32:25Z
          - fixed PAUSE download URI to use https

0.164     2024-11-27 18:20:14Z
          - in recognition of how long tooling has understood how to run
            Build.PL, the default installer is now [ModuleBuildTiny], rather
            than [ModuleBuildTiny::Fallback] and [MakeMaker::Fallback]

0.163     2023-12-09 22:56:32Z
          - .travis.yml file removed from minting profile

0.162     2021-11-28 20:10:01Z
          - now using 're_strict' feature in boilerplate
          - removed podweaver override for "SUPPORT" section, giving
            individual distributions more flexibility

0.161     2021-05-26 03:59:08Z
          - freenode irc channels have migrated to libera

0.160     2021-03-23 20:02:54Z
          - add boilerplate to disable bareword filehandles
          - resolve inconsistency in $VERSION bumping in scripts (by not
            expecting/munging $VERSIONs there)
          - xt/author/changes_has_content.t (generated from
            xt/release/changes_has_content.t) has been removed, as it seems to
            cause confusion on behalf of pull request submitters

0.159     2020-11-22 01:17:45Z
          - fix test that broke with Dist::Zilla 6.017 (a test changed its
            filename)

0.158     2020-06-03 17:27:26Z
          - properly escape the escaped PAUSE download URL (sorry again Olaf!)

0.157     2020-05-27 20:46:58Z
          - properly uri-escape the PAUSE download URL (sorry Olaf!)

0.156     2020-05-03 17:47:37Z