@@ -4,6 +4,9 @@ copyright_holder    = Karen Etheridge
 copyright_year      = 2013
 license             = Perl_5
 
+[Prereqs / ConfigureRequires]
+File::ShareDir::Install = 0.10 ; https://rt.cpan.org/Ticket/Display.html?id=95749
+
 [Prereqs / dzil plugin bundle (direct)]
 -phase = runtime
 -relationship = requires
