@@ -18,8 +18,8 @@ format = 0.001
 
 ; for metadata used in initial CONTRIBUTING file
 [GithubMeta]
+issues = 1
 [AutoMetaResources]
-bugtracker.rt = 1
 
 [GatherDir::Template]
 root = skel
