@@ -1,0 +1,9 @@
+---
+name: Feature request
+about: Request a new feature
+title: 'Feature Request: ...'
+labels: ''
+assignees: ''
+
+---
+
