@@ -17,6 +17,7 @@ license             = {{ $dist->_license_class }}
 }}
 [@Author::ETHER]
 :version = 0.097
+bugtracker = github
 {{
     ($zilla_plugin || $dist->name =~ /^Moose/ ? "Test::MinimumVersion.max_target_perl = 5.008003\n" : '')
     . ($zilla_plugin ? <<RESOURCES
