@@ -4,6 +4,8 @@ Revision history for Dist-Zilla-PluginBundle-Author-ETHER
           - minting profile updates:
             - pragma boilerplate updated to disable "smartmatch" and "switch"
               features
+            - GitHub issues tracker is now the default; added templates for
+              pull requests and issues
 
 0.167     2025-05-20 00:01:11Z
           - fix woven pod for irc details when irc channel contains a hyphen
